@@ -11,7 +11,7 @@
     </parent>
     <groupId>org.openwms</groupId>
     <artifactId>org.openwms.parent</artifactId>
-    <version>12</version>
+    <version>13</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org Parent Project</name>
     <description>OpenWMS.org is an open source warehouse management software</description>
@@ -299,8 +299,8 @@
                 <schemaspy-maven-plugin.version>5.1.0</schemaspy-maven-plugin.version>
                 <M2_REPO_DIR>/home/travis/.m2/repository</M2_REPO_DIR>
                 <SCHEMA>public</SCHEMA>
-                <DB_USERNAME>karl</DB_USERNAME>
-                <DB_PASSWORD>karl</DB_PASSWORD>
+                <DB_USERNAME>KARL</DB_USERNAME>
+                <DB_PASSWORD>KARL</DB_PASSWORD>
             </properties>
             <reporting>
                 <plugins>
@@ -372,15 +372,14 @@
     <properties>
         <!-- used by surefire plugin in combination with jacoco -->
         <argLine><![CDATA[-Dcatalina.base=${project.build.directory}
+        --illegal-access=permit
         -Dorg.springframework.restdocs.outputDir=./target/generated-snippets
         -Ddocumentation.dir=./target
         -Dorg.jboss.logging.provider=slf4j
         -Dfile.encoding=${project.build.sourceEncoding} ${surefireArgs}]]>
         </argLine>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <maven.compile.targetLevel>${java.version}</maven.compile.targetLevel>
-        <maven.compile.sourceLevel>${java.version}</maven.compile.sourceLevel>
+        <java.version>11</java.version>
         <ci.buildNumber>MANUAL</ci.buildNumber>
         <debug.info>true</debug.info>
         <documentation.dir>${project.build.directory}</documentation.dir>
@@ -395,49 +394,51 @@
         <surefireArgs>-Dspring.profiles.active=TEST</surefireArgs>
 
         <!-- Dependency versions -->
-        <ameba-lib.version>2.1</ameba-lib.version>
+        <ameba-lib.version>2.3-SNAPSHOT</ameba-lib.version>
         <apiguardian-api.version>1.1.0</apiguardian-api.version>
-        <archunit.version>0.11.0</archunit.version>
+        <archunit.version>0.12.0</archunit.version>
         <aspectj.version>1.9.4</aspectj.version> <!-- Keep in sync with boot -->
         <dozer.version>5.5.1</dozer.version>
-        <feign-httpclient.version>9.7.0</feign-httpclient.version>
+        <feign-httpclient.version>10.4.0</feign-httpclient.version> <!-- Keep in sync with spring-cloud-openfeign-dependencies -->
         <junit-platform.version>1.3.1</junit-platform.version>
         <guava.version>19.0</guava.version>
-        <hystrix-javanica.version>1.5.12</hystrix-javanica.version>
-        <logstash-logback-encoder.version>5.3</logstash-logback-encoder.version>
-        <postgresql.version>42.2.6</postgresql.version> <!-- Keep in sync with Boot -->
+        <hystrix-javanica.version>1.5.18</hystrix-javanica.version> <!-- Keep in sync with spring-cloud-netflix-hystrix -->
+        <logstash-logback-encoder.version>6.2</logstash-logback-encoder.version>
+        <postgresql.version>42.2.8</postgresql.version> <!-- Keep in sync with Boot -->
 
-        <spring-boot.version>2.1.8.RELEASE</spring-boot.version>
-        <spring-cloud-dependencies.version>Greenwich.SR2</spring-cloud-dependencies.version>
-        <spring-restdocs-mockmvc.version>2.0.3.RELEASE</spring-restdocs-mockmvc.version>
-        <spring.version>5.1.9.RELEASE</spring.version> <!-- Keep in sync with boot -->
+        <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
+        <spring-data-envers.version>2.2.2.RELEASE</spring-data-envers.version>
+        <spring-restdocs-mockmvc.version>2.0.4.RELEASE</spring-restdocs-mockmvc.version>
+        <spring-framework.version>5.2.1.RELEASE</spring-framework.version> <!-- Keep in sync with boot -->
         <start-class></start-class> <!-- keep it empty, set by actual boot module -->
 
         <!--   Plugin versions   -->
         <asciidoctor-maven-plugin.version>1.6.0</asciidoctor-maven-plugin.version>
-        <aspectj-maven-plugin.version>1.11</aspectj-maven-plugin.version>
-        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
-        <git-commit-id-plugin.version>3.0.0</git-commit-id-plugin.version>
+        <aspectj-maven-plugin.version>1.12.9</aspectj-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+        <git-commit-id-plugin.version>3.0.1</git-commit-id-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version> <!-- Keep in sync with boot -->
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version> <!-- Keep in sync with boot -->
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.1.0</maven-javadoc-plugin.version> <!-- Keep in sync with boot -->
+        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version> <!-- Keep in sync with boot -->
         <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version> <!-- Keep in sync with boot -->
         <maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version> <!-- Keep in sync with boot -->
-        <maven-scm-publish-plugin.version>1.1</maven-scm-publish-plugin.version>
-        <maven-site-plugin.version>3.7.1</maven-site-plugin.version> <!-- Keep in sync with boot -->
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version> <!-- Keep in sync with boot -->
+        <maven-scm-publish-plugin.version>3.0.0</maven-scm-publish-plugin.version>
+        <maven-site-plugin.version>3.8.2</maven-site-plugin.version> <!-- Keep in sync with boot -->
+        <maven-source-plugin.version>3.1.0</maven-source-plugin.version> <!-- Keep in sync with boot -->
         <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version> <!-- Keep in sync with boot -->
         <maven-surefire-report-plugin.version>3.0.0-M3</maven-surefire-report-plugin.version>
         <surefire-junit47.version>3.0.0-M3</surefire-junit47.version>
-        <wagon-ssh.version>3.3.2</wagon-ssh.version>
-        <wagon-ftp.version>3.3.2</wagon-ftp.version>
+        <wagon-ssh.version>3.3.4</wagon-ssh.version>
+        <wagon-ftp.version>3.3.4</wagon-ftp.version>
+        <versions-maven-plugin.version>2.5</versions-maven-plugin.version>
     </properties>
 
     <reporting>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
                 <reportSets>
@@ -468,6 +469,7 @@
                 </reportSets>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>${maven-surefire-report-plugin.version}</version>
                 <configuration>
@@ -475,6 +477,7 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>${maven-project-info-reports-plugin.version}</version>
                 <reportSets>
@@ -507,6 +510,7 @@
                 </reportSets>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>${maven-site-plugin.version}</version>
             </plugin>
@@ -539,9 +543,8 @@
                         <debug>${debug.info}</debug>
                         <optimize>true</optimize>
                         <fork>true</fork>
-                        <source>${maven.compile.sourceLevel}</source>
-                        <target>${maven.compile.targetLevel}</target>
                         <encoding>${project.build.sourceEncoding}</encoding>
+                        <release>11</release>
                     </configuration>
                 </plugin>
 
@@ -562,6 +565,7 @@
                 </plugin>
 
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
                     <version>${maven-enforcer-plugin.version}</version>
                     <configuration>
@@ -578,7 +582,7 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
+                    <groupId>io.starter</groupId>
                     <artifactId>aspectj-maven-plugin</artifactId>
                     <version>${aspectj-maven-plugin.version}</version>
                     <configuration>
@@ -754,14 +758,24 @@
                         <scmBranch>gh-pages</scmBranch>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>${versions-maven-plugin.version}</version>
+                    <configuration>
+                        <generateBackupPoms>false</generateBackupPoms>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
             </plugin>
@@ -863,9 +877,14 @@
                 <version>${logstash-logback-encoder.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-envers</artifactId>
+                <version>${spring-data-envers.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aspects</artifactId>
-                <version>${spring.version}</version>
+                <version>${spring-framework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -895,15 +914,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 </project>
